# opmed-optimization-hkutomanov

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  activate.ps1  activate.sh  current_versions.txt  pyproject.toml  pytest.ini  structure.md
.github/workflows/: lint.yml  tests.yml
config/: config.yaml  tune_grid.yaml  tune_grid_stress.yaml
data/input/: synthetic_1d_1r.csv  synthetic_2d_2r.csv  synthetic_3d_16r.csv  synthetic_3d_8r.csv
data/output/: metrics.json
docs/: CODESTYLE.md  INSTALL.md  schemas.md
docs/ADRs/: ADR-001-solver-choice.md  ADR-002-time-representation.md  ADR-003-module-boundaries.md  ADR-004-configuration-management.md  ADR-005-io-formats.md  ADR-006-logging-metrics.md  ADR-007-reproducibility.md  ADR-008-errors-validation.md  README.md  _TEMPLATE.md
docs/ARCHITECTURE/: 3.2.1 - Data Schemas (Pydantic).md  3.2.10 - Solver Hyperparameter Tuning Interface.md  3.2.2 - DataLoader Interface.md  3.2.3 - ModelBuilder (SolverCore) Interface.md  3.2.3a - Modeling Configuration Extension for Hyperparameter Tuning.md  3.2.4 - Optimizer Interface.md  3.2.5 - Validator Interface.md  3.2.6 - Visualizer Interface.md  3.2.7 - Metrics & Logger Interface.md  3.2.8 - Orchestration Interface.md  3.2.9 - Exception Hierarchy.md  INFRA.md
docs/diagrams/: container.md
docs/scrum/: epic3_architecture.md  epic5_solverCore_development.md  epic6_subsystems.md  epic7_hyperparameter_tuning.md  epic_4_preDevOps.md
docs/scrum/epic1_problem_formulation/: T1.1.1_entities_and_params.md  T1.1.2_constraints.md  T1.1.3_objective_function.md  T1.1.4_solver_choice.md  T1.1.5_logic_scheme.md  T1.1.6_data_structure.md  T1.1.7_validity_criteria.md  T1.1.8_problem_formulation_summary.md
docs/scrum/epic2_theoretical_framework/: Epic_2_plan.md
docs/scrum/epic2_theoretical_framework/story2_1_basic_theoretical_solution/: T2.1.1_formal_definitions.md  T2.1.2_cost_function_and_metrics.md  T2.1.3_problem_classification.md  T2.1.4_method_justification.md  T2.1.5_validation_protocol.md
docs/scrum/epic2_theoretical_framework/story2_2_academic_algorithms_study/: T2.2.1_method_comparison.md  T2.2.2_hyperparameter_theory.md  T2.2.3_time_discretization_analysis.md  T2.2.4_heuristics_review.md  T2.2.5_parameter_tuning_guidelines.md
docs/scrum/epic2_theoretical_framework/story2_3_theoretical_description/: T2.3.1_summary_and_formulas.md  T2.3.2_formal_model_definition.md  T2.3.3_model_validity_and_stability.md  T2.3.4_future_extensions.md  T2.3.5_final_theoretical_document.md
schemas/: config.schema.json  solution.schema.json  surgery.schema.json
scripts/: PIPELINE.md  TUNE.md  gen_schemas.py  gen_synthetic_data.py  local_check.py  run.py  select_best_config.py  tune.py
scripts/development/: T4.1.1_verify_import.ps1
solver_core/: __init__.py
src/opmed/: __init__.py  errors.py
src/opmed/dataloader/: __init__.py  config_loader.py  dataLoader_postload_adapter.md  loader.py  postload_handler.py  surgeries_loader.py  types.py
src/opmed/export/: EXPORT.md  __init__.py  solution_export.py
src/opmed/metrics/: __init__.py  logger _and_metrics.md  logger.py  metrics.py
src/opmed/schemas/: models.py
src/opmed/solver_core/: __init__.py  model_builder.py  optimizer.py  optimizer_core.py  result_store.py  solvercore.md
src/opmed/validator/: VALIDATOR.md  __init__.py  validator.py
src/opmed/visualizer/: VISUALIZER.md  __init__.py  plot.py
tests/: conftest.py  test_imports.py  test_models.py  test_run_pipeline.py
tests/dataloader/: test_config_loader.py  test_postload_handler.py  test_surgeries_loader.py
tests/export/: test_export_solution.py
tests/metrics/: test_logger.py  test_metric.py
tests/solver_core/: test_end_to_end.py  test_model_builder.py  test_optimizer.py  test_optimizer_metrics.py  test_result_store.py
tests/tuning/: test_select_best_config.py  test_tune_smoke.py
tests/validator/: test_validator.py
tests/visualizer/: test_plot.py
visualizer/: __init__.py
