[project]
name = "opmed-optimization"
version = "0.1.0"
description = "Opmed optimization framework"
authors = [
    { name = "hkutomanov" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pydantic (>=2.12.3,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "ortools (>=9.14.6206,<10.0.0)",
]

[project.optional-dependencies]
dev = [
    "ruff (>=0.14.2,<0.15.0)",
    "black (>=25.9.0,<26.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "hypothesis (>=6.142.4,<7.0.0)"
]

# --- Poetry metadata (чтобы не потерять совместимость) ---
[tool.poetry]
packages = [{ include = "opmed", from = "src" }]

# --- src-layout для setuptools ---
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

# --- Конфигурации инструментов ---
[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = "(data/|docs/|schemas/|infra/|scripts/)"

[tool.pytest.ini_options]
addopts = "-q --cov=opmed --cov-report=term-missing"
testpaths = ["tests"]

# --- Build system (для pip install -e .) ---
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
