[project]
name = "opmed-optimization"
version = "0.1.0"
description = "Opmed optimization framework"
authors = [
    { name = "hkutomanov" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pydantic~=2.5",
    "pandas~=2.3",
    "pyyaml~=6.0",
    "matplotlib~=3.10",
    "ortools~=9.14",
]

[project.optional-dependencies]
dev = [
    "ruff~=0.14",
    "black~=25.9",
    "mypy~=1.18",
    "pytest~=7.3",
    "pytest-cov~=7.0",
    "pre-commit~=4.3",
    "hypothesis~=6.142"
]

# --- Poetry metadata (чтобы не потерять совместимость) ---
[tool.poetry]
packages = [{ include = "opmed", from = "src" }]

# --- src-layout для setuptools ---
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

# --- Конфигурации инструментов ---
[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = "(data/|docs/|schemas/|infra/|scripts/)"

[tool.pytest.ini_options]
addopts = "-q --cov=opmed --cov-report=term-missing"
testpaths = ["tests"]

# --- Build system (для pip install -e .) ---
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
